# savorswipe

./: .commitlintrc.json  .env.example  .eslintignore  .eslintrc.js  .flake8  .gitignore  .markdownlint.json  .markdownlintignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  TEST_PICTURE_PICKER.md  app.config.js  app.json  backend_test_output.txt  jest.globals.js  jest.setup.js  lint_output.txt  lychee.toml  metro.config.js  package-lock.json  package.json  playwright.config.ts  test_output.txt
backend/: .env.deploy.example  DEPLOYMENT.md  aws_clients.py  buildspec.yml  cloudformation.yaml  codebuild-template.yaml  config.py  deploy-cf.sh  deploy-codebuild.sh  deploy-sam.sh  deploy-simple.sh  deploy-stack.sh  deploy.sh  duplicate_detector.py  embedding_generator.py  embeddings.py  fix_ingredients.py  handlepdf.py  http_client.py  image_uploader.py  lambda_function.py  logger.py  ocr.py  pyproject.toml  pytest.ini  recipe_deletion.py  requirements.txt  routes.py  samconfig.toml.example  search_image.py  template.yaml  test_duplicate_detector.py  test_embedding_generator.py  test_embeddings.py  test_lambda_function.py  test_manual.py  test_ocr.py  test_search_image.py  test_upload.py  upload.py
backend/__tests__/: test_upload.py
backend/routes/: __init__.py  recipe_delete.py  recipe_image.py  recipes.py  upload.py  upload_status.py
backend/scripts/: backfill_embeddings.py
backend/services/: __init__.py  etag_writer.py  recipe_completeness.py  title_similarity.py
backend/tests/: conftest.py  mocks.py  test_duplicate_detector.py  test_embedding_generator.py  test_embeddings.py  (+9 more)
(+222 files in other folders)
