[project]
name = "savorswipe-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.0.0",
    "pymupdf==1.27.2.2",
    "boto3>=1.35.0",
    "requests>=2.32.0",
    "Pillow>=10.4.0",
]

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "requests-mock>=1.12.1",
    "moto[s3]>=5.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
