[project]
name = "savorswipe-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.42.0",
    "pymupdf==1.27.2.3",
    "boto3>=1.43.26",
    "requests>=2.34.2",
    "Pillow>=10.4.0",
]

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "pytest-mock>=3.15.1",
    "requests-mock>=1.12.1",
    "moto[s3]>=5.2.2",
    "ruff>=0.15.19",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
